syntax = "proto3";

package stats.service.dashboard;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

import "stats/message/user_predictions_request.proto";
import "stats/message/similar_events_request.proto";
import "stats/message/interactions_count_request.proto";
import "stats/message/recomended_event.proto";

service RecommendationsController {

  rpc GetRecommendationsForUser (stats.message.event.request.UserPredictionsRequestProto)
      returns (stream stats.message.event.response.RecommendedEventProto);


  rpc GetSimilarEvents (stats.message.event.request.SimilarEventsRequestProto)
      returns (stream stats.message.event.response.RecommendedEventProto);


  rpc GetInteractionsCount (stats.message.event.request.InteractionsCountRequestProto)
      returns (stream stats.message.event.response.RecommendedEventProto);
}
